# prBIAD

./: .gitignore  AGENTS.md  BUILD_WORKSPACE.md  INTEGRATION.md  PHASE2_IMPLEMENTATION.md  README_IMPLEMENTATION.md  Under  apply_fix_and_build.sh  build-apk.yml  build.gradle.kts  settings.gradle.kts
.github/: workfllinen.yml
app/: build.gradle.kts  proguard-rules.pro
bitchat-core/: .gitignore  DISTILLATION_REPORT.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
bitchat-core/bitchat-core/: build.gradle.kts  consumer-rules.pro
bitchat-main/: .periphery.baseline.json  .periphery.yml  .swiftlint.yml  PRIVACY_POLICY.md  Package.swift  WHITEPAPER.md
bitchat-main/Configs/: Release.xcconfig
bitchat-main/bitchat.xcodeproj/: project.pbxproj
exo-core/: .gitignore  BACKENDS.md  DISTILLATION_REPORT.md  README.md  SHARDING.md  pyproject.toml  requirements.txt
exo-core/exo_core/: __init__.py  log.py  node.py  selftest.py
exo-core/exo_core/inference/: __init__.py  engine.py  sharded.py  sharder.py  shards.py
exo-core/exo_core/inference/backends/: __init__.py  bridge.py  registry.py
exo-core/exo_core/networking/: __init__.py  bitchat_adapter.py  mesh.py  protocol.py
exo-core/exo_core/shared/: __init__.py  topology.py  types.py
exo-core/exo_core/topology/: __init__.py  partition.py
exo-core/exo_core/worker/: __init__.py  planner.py  runner.py
exo-core/integration/kotlin/: InferenceBackend.kt  LiteRtLlmBackend.kt  OnnxRuntimeBackend.kt  ShardBackend.kt  TfLiteBackend.kt
exo-core/tests/: test_exo_core.py
(+522 files in other folders)
